Remove check on max requester secrets count in PalaemonSessionService